# PureWebM

./: README.md  TODO.md  pyproject.toml  tox.ini
.github/workflows/: tagged-release.yml  tox.yml
src/purewebm/: __init__.py  __main__.py  console.py  encoder.py  ffmpeg.py  ipc.py  purewebm.py  video.py  webm.py
tests/: console_test.py
